data/all_generated_tests/raw_wast_tests/call_InvalidorInconsistentControlFlowGraph_3611.wast
;; 10. **Test Call from an Unreachable Code Section**:     - **Description**: Place a `call x` instruction in a section of code that is statically unreachable.     - **Constraint**: The instruction should never be executed or affect the control flow.     - **Relation to CFG**: An inconsistent CFG might not recognize the unreachable code properly, leading to the call being executed incorrectly.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (func $test
      (if (i32.const 0)
        (then 
          (call 0)
        )
      )
    )
  )
  "type mismatch"
)